# corpus-hybrid-rag

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py  worker.py
app/api/: documents.py  health.py  query.py  router.py  search.py
app/chunking/: base.py  recursive.py  semantic.py
app/core/: config.py  database.py  deps.py  limiter.py  logging.py  qdrant.py
app/embeddings/: service.py
app/generation/: synthesizer.py
app/ingestion/: connector.py  pdf.py
app/models/: schemas.py
app/models/orm/: document.py
app/query/: classify.py  decompose.py  hyde.py  llm.py  pipeline.py  rewrite.py
app/retrieval/: _filters.py  base.py  bm25.py  dense.py  factory.py  hybrid.py  reranked.py  sparse.py
cli/: eval.py  main.py
eval/: dataset.py  golden.yaml  metrics.py  report.py  runner.py
migrations/: env.py
migrations/versions/: 0001_add_documents.py
