[project]
name = "corpus-rag"
version = "0.1.0"
description = "Portfolio-grade RAG system with hybrid retrieval and evaluation harness"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    # Config
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    # Vector DB
    "qdrant-client>=1.12",
    # Cache
    "redis[hiredis]>=5.2",
    # Background jobs
    "arq>=0.26",
    # Embeddings & ML
    "sentence-transformers>=3.3",
    "rank-bm25>=0.2.2",
    # PDF parsing
    "unstructured[pdf]>=0.16",
    "pypdf>=5.1",
    # Chunking
    "semantic-chunkers>=0.0.13",
    # LLM abstraction
    "litellm>=1.56",
    # Evaluation
    "ragas>=0.2",
    # CLI
    "typer>=0.15",
    # Logging
    "structlog>=24.4",
    # Rate limiting
    "slowapi>=0.1.9",
    # HTTP client
    "httpx>=0.28",
]

[project.scripts]
corpus = "cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-redis>=4.6",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "cli"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ANN"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
"migrations/**" = ["ANN"]
"cli/**" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: requires Docker services running"]

[tool.coverage.run]
source = ["app", "cli"]
omit = ["*/tests/*", "*/migrations/*"]
